[package]
name = "toypk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "toypk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.20.0", features = ["serde", "extension-module"] }
anyhow = "1.0"
serde = {version="1.0", features = ["derive"]}
serde-pyobject = "0.2.0"